# Util.Modbus

./: .classpath  .gitignore  .project  CMakeCross.txt  CMakeLists.txt  build.bash  build.properties.example  build.xml  cmake.properties  ivy.xml  mkapp
.github/workflows/: main.yml
debian/: changelog  control  libjava-modbus.install  rules
src/main/cpp/: CMakeLists.txt  modbus_base.cpp  modbus_base.h  modbus_mapping.cpp  modbus_mapping.h  modbus_rtu.cpp  modbus_rtu.h  modbus_tcppi.cpp  modbus_tcppi.h
src/main/cpp/common/: Exception.cpp  Exception.h  Mutex.cpp  Mutex.h  MutexException.cpp  MutexException.h  MutexLock.cpp  MutexLock.h
src/main/java/havis/util/modbus/: DataType.java  Field.java  Floater.java  Mapper.java  RegisterType.java
src/main/java/havis/util/modbus/slave/: FieldModbusSlaveProcessor.java  ModbusSlave.java  ModbusSlaveException.java  ModbusSlaveProcessor.java  RtuModbusSlaveProcessor.java
src/main/resources/: MANIFEST.MF  ivy.xml  java-modbus.i  module-info.java
src/main/resources/classpath/OSGI-INF/: havis.util.modbus.properties
src/main/resources/deb/DEBIAN/: control
src/main/test/havis/util/modbus/example/: Master.java  README.md  Slave.java
src/main/test/havis/util/modbus/slave/: ModbusSlaveProcessorTest.java
